# MonoScript

./: .gitmodules  CMakeLists.txt  MonoScript.cxx  README.md
UnitTests/: CMakeLists.txt  main.cpp
UnitTests/Resources/: script.cs
cmake/: CMakeLists.txt  Metadata.cmake  Mini.cmake  Mono.cmake  Utils.cmake  common.cmake  eglib.cmake
cmake/MonoMetadata/: CMakeLists.txt
cmake/zlib/: CMakeLists.txt
inc/MonoScript/: macros.h  stdInclude.h
inc/MonoScript/CPU/: cpu-amd64.c
inc/MonoScript/Compiler/: Compiler.h
inc/MonoScript/Utils/: FunctionsHolder.h
src/MonoScript/Compiler/: Compiler.cpp
src/MonoScript/Utils/: FunctionsHolder.cpp
